add get user list handler and repository function
