# backend/docs/swagger.json
@@ -304,6 +304,43 @@
                 }
             }
         },
+        "/user/getList": {
+            "get": {
+                "description": "get multiple user by their id",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Get users",
+                "operationId": "getUserList",
+                "parameters": [
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        },
+                        "collectionFormat": "csv",
+                        "description": "User search by id",
+                        "name": "ids",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/UserPublic"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/user/register": {
             "post": {
                 "description": "Register new user, given password will be encrypted on backend. This is subject to change",
@@ -472,7 +509,7 @@
                         "$ref": "#/definitions/Law"
                     }
                 },
-                "member": {
+                "members": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/TeamMember"
@@ -539,9 +576,6 @@
                     "type": "string"
                 },
                 "lastName": {
-                    "type": "string"
-                },
-                "userName": {
                     "type": "string"
                 }
             }
